changed fully to java 11 fixed missing submissions in csv changed Submission that used charset is remembered