@@ -6,7 +6,7 @@
 
     <groupId>de.unifrankfurt.dbis</groupId>
     <artifactId>SQLChecker</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.3c</version>
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -44,9 +44,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <release>10</release>
+                    <release>11</release>
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
-                    <compilerArgument>--add-modules=javafx.base</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
